### 0.0.8 (released 2008-01-10)

New icon, thanks Rui.

I'm sure there was something else. I decide I should start keeping a ChangeLog.

### 0.0.10 (released 2008-01-11)

I've taken a random stab at CSS styling - the thing is a lot prettier now,
though that's not really saying much. Input welcome. 'themes' (spit) are
planned, of course. But till then, at least it isn't just a default webkit
display now.

The webkit view now has crude click-through, which is useful as the window
is always on top, so of course you want to follow that link. But it _doesn't_
have hover-through, so you won't see link mouseover effects just yet.
Annoying.

Companies in the address book are recognised as such, and display the company
name first. They have a different default icon.

The NetNewsWire clue provider now tries to find a person based on the target of
the currently viewed headline first, then falls back to the feed URL, rather
than just using the feed URL. It also looks for Microformats in the body of
the feed item before considering URLs. I may reconsider the ordering here,
though.

Hopefully better URL disambiguation now - www. on the beginning of addresses
can be considered optional.

The display will hang around a little longer if it thinks you're no longer
looking at someone interesting, to try to bridge the gap if you're navigating
to a resource about the same person.

Mattb had an odd crashing bug that I don't understand, where there seemed to be
no 'active application'. I'm now guarding against this case.

Shelf now stops correctly when quit. oops.

### 0.0.11 (in development)

Feed provider now displays the first 10 words of the blog entry under the
heading.

Use urllib2 to get urls - this lets me do the right thing for feeds that
need authentication.